--- a/flask-app/templates/login.html
+++ b/flask-app/templates/login.html
@@ -27,3 +27,11 @@
     </div>
 </div>
 {% endblock %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+    <div class="notification is-danger">
+        {{ messages[0] }}
+    </div>
+{% endif %}
+{% endwith %}
+<form method="POST" action="/login">
